// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadStatusItem renders custom aria labels 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 384 512"
        >
          <path
            d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
          />
        </svg>
        <svg
          class="pf-v6-icon-rh-ui"
          viewBox="0 0 32 32"
        >
          <path
            d="M26.5 1H12a1.001 1.001 0 0 0-.708.294L4.294 8.292A1.001 1.001 0 0 0 4 9v20.5c0 .827.673 1.5 1.5 1.5h21c.827 0 1.5-.673 1.5-1.5v-27c0-.827-.673-1.5-1.5-1.5ZM11 4.414V8H7.414L11 4.414ZM26 29H6V10h5.5c.827 0 1.5-.673 1.5-1.5V3h13v26Z"
          />
        </svg>
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-label="progressAriaLabel"
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="buttonAriaLabel"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:rf:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom class names 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item test"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 384 512"
        >
          <path
            d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
          />
        </svg>
        <svg
          class="pf-v6-icon-rh-ui"
          viewBox="0 0 32 32"
        >
          <path
            d="M26.5 1H12a1.001 1.001 0 0 0-.708.294L4.294 8.292A1.001 1.001 0 0 0 4 9v20.5c0 .827.673 1.5 1.5 1.5h21c.827 0 1.5-.673 1.5-1.5v-27c0-.827-.673-1.5-1.5-1.5ZM11 4.414V8H7.414L11 4.414ZM26 29H6V10h5.5c.827 0 1.5-.673 1.5-1.5V3h13v26Z"
          />
        </svg>
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            />
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              0B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r3:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom file name/size/icon/progressAriaLiveMessage when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 384 512"
        width="1em"
      >
        <path
          d="M384 121.941V128H256V0h6.059a24 24 0 0 1 16.97 7.029l97.941 97.941a24.002 24.002 0 0 1 7.03 16.971zM248 160c-13.2 0-24-10.8-24-24V0H24C10.745 0 0 10.745 0 24v464c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V160H248zm-135.455 16c26.51 0 48 21.49 48 48s-21.49 48-48 48-48-21.49-48-48 21.491-48 48-48zm208 240h-256l.485-48.485L104.545 328c4.686-4.686 11.799-4.201 16.485.485L160.545 368 264.06 264.485c4.686-4.686 12.284-4.686 16.971 0L320.545 304v112z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        test message
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r7:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom function progressAriaLiveMessage when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 384 512"
        width="1em"
      >
        <path
          d="M384 121.941V128H256V0h6.059a24 24 0 0 1 16.97 7.029l97.941 97.941a24.002 24.002 0 0 1 7.03 16.971zM248 160c-13.2 0-24-10.8-24-24V0H24C10.745 0 0 10.745 0 24v464c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V160H248zm-135.455 16c26.51 0 48 21.49 48 48s-21.49 48-48 48-48-21.49-48-48 21.491-48 48-48zm208 240h-256l.485-48.485L104.545 328c4.686-4.686 11.799-4.201 16.485.485L160.545 368 264.06 264.485c4.686-4.686 12.284-4.686 16.971 0L320.545 304v112z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        test message 0
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r9:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom progress value/variant when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 384 512"
        >
          <path
            d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
          />
        </svg>
        <svg
          class="pf-v6-icon-rh-ui"
          viewBox="0 0 32 32"
        >
          <path
            d="M26.5 1H12a1.001 1.001 0 0 0-.708.294L4.294 8.292A1.001 1.001 0 0 0 4 9v20.5c0 .827.673 1.5 1.5 1.5h21c.827 0 1.5-.673 1.5-1.5v-27c0-.827-.673-1.5-1.5-1.5ZM11 4.414V8H7.414L11 4.414ZM26 29H6V10h5.5c.827 0 1.5-.673 1.5-1.5V3h13v26Z"
          />
        </svg>
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 42%.
      </div>
      <div
        class="pf-v6-c-progress pf-m-warning"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            42%
          </span>
          <span
            class="pf-v6-c-progress__status-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 32 32"
              width="1em"
            >
              <path
                d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
              />
            </svg>
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="42"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 42%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:rd:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders expected values from a passed file object 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 384 512"
        >
          <path
            d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
          />
        </svg>
        <svg
          class="pf-v6-icon-rh-ui"
          viewBox="0 0 32 32"
        >
          <path
            d="M26.5 1H12a1.001 1.001 0 0 0-.708.294L4.294 8.292A1.001 1.001 0 0 0 4 9v20.5c0 .827.673 1.5 1.5 1.5h21c.827 0 1.5-.673 1.5-1.5v-27c0-.827-.673-1.5-1.5-1.5ZM11 4.414V8H7.414L11 4.414ZM26 29H6V10h5.5c.827 0 1.5-.673 1.5-1.5V3h13v26Z"
          />
        </svg>
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r5:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders with expected class names 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 384 512"
        >
          <path
            d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
          />
        </svg>
        <svg
          class="pf-v6-icon-rh-ui"
          viewBox="0 0 32 32"
        >
          <path
            d="M26.5 1H12a1.001 1.001 0 0 0-.708.294L4.294 8.292A1.001 1.001 0 0 0 4 9v20.5c0 .827.673 1.5 1.5 1.5h21c.827 0 1.5-.673 1.5-1.5v-27c0-.827-.673-1.5-1.5-1.5ZM11 4.414V8H7.414L11 4.414ZM26 29H6V10h5.5c.827 0 1.5-.673 1.5-1.5V3h13v26Z"
          />
        </svg>
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            />
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              0B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r1:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem rendersdefault progressAriaLiveMessage when nothing is passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 384 512"
        width="1em"
      >
        <path
          d="M384 121.941V128H256V0h6.059a24 24 0 0 1 16.97 7.029l97.941 97.941a24.002 24.002 0 0 1 7.03 16.971zM248 160c-13.2 0-24-10.8-24-24V0H24C10.745 0 0 10.745 0 24v464c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V160H248zm-135.455 16c26.51 0 48 21.49 48 48s-21.49 48-48 48-48-21.49-48-48 21.491-48 48-48zm208 240h-256l.485-48.485L104.545 328c4.686-4.686 11.799-4.201 16.485.485L160.545 368 264.06 264.485c4.686-4.686 12.284-4.686 16.971 0L320.545 304v112z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:rb:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;
